--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
     <string name="nav_wrf">WRF</string>
     <string name="menu_wrf">WRF</string>
     <string name="menu_mm">MeteoMedia</string>
-    <string name="menu_nds_radar">NdsRadar</string>
+    <string name="menu_nds_radar">Radar BRD</string>
 </resources>
