--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_nds_radar">Radar BRD</string>
 
     <string name="menu_home">Home</string>
+    <string name="test">Test</string>
 </resources>
