--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">MucWetter2</string>
     <string name="about_github">https://github.com/nukul4r/mucwetter2</string>
-    <string name="nav_header_desc">Navigation header</string>
     <string name="nav_header_github">https://github.com/nukul4r/mucwetter2</string>
     <string name="about_btc">16E9jH7ew5EszUkx8LFwT8ojiDLJox5xaY</string>
+    <string name="logo">MucWettrer2 Logo</string>
 </resources>
